[nobleform] Work in progress for Noble Form Power

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Powerstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Powerstrings.json
@@ -8,5 +8,16 @@
       "When you lose Gold, gain ",
       " gold."
     ]
+  },
+
+  "${ModID}:TrueNobleFormPower": {
+    "NAME": "True Noble Form",
+    "DESCRIPTIONS": [
+      "When you discard or play a card, draw ",
+      "a card. ",
+      " cards. ",
+      "When you lose Gold or HP, gain ",
+      " gold."
+    ]
   }
 }
