--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -3,6 +3,16 @@
     "NAME": "Noble Strike",
     "DESCRIPTION": "Deal 6 damage. Austerity: Gain 5 Gold and draw a card. Tribute 5: Draw an Attack."
   },
+  "${ModID}:NobleStrikeTribute": {
+    "NAME": "Noble Strike - Tribute",
+    "DESCRIPTION": "Tribute 5: Draw an Attack.",
+    "UPGRADED_DESCRIPTION": "Tribute 5: Draw !M! Attacks."
+  },
+  "${ModID}:NobleStrikeAusterity": {
+    "NAME": "Noble Strike",
+    "DESCRIPTION": "Gain 5 Gold and draw a card.",
+    "UPGRADED_DESCRIPTION": "Gain 5 Gold and draw !M! cards."
+  },
   "${ModID}:NobleSlash": {
     "NAME": "Noble Slash",
     "DESCRIPTION": "Discard one random card at the start of the next turn. Deal !D! damage.."
