--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -5,12 +5,12 @@
     "UPGRADE_DESCRIPTION": "Deal 6 damage. Austerity: Gain 5 Gold and draw !M! cards. Tribute 5: Draw !M! Attacks."
   },
   "${ModID}:NobleStrikeTribute": {
-    "NAME": "Noble Strike - Tribute",
+    "NAME": "Tribute",
     "DESCRIPTION": "Tribute 5: Draw an Attack.",
     "UPGRADE_DESCRIPTION": "Tribute 5: Draw !M! Attacks."
   },
   "${ModID}:NobleStrikeAusterity": {
-    "NAME": "Noble Strike",
+    "NAME": "Austerity",
     "DESCRIPTION": "Gain 5 Gold and draw a card.",
     "UPGRADE_DESCRIPTION": "Gain 5 Gold and draw !M! cards."
   },
