--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -42,12 +42,12 @@
   },
   "${ModID}:BoundlessTalent": {
     "NAME": "Boundless Talent",
-    "DESCRIPTION": "${ModID}:Austerity: Draw until your hand is full. ${ModID}:Tribute 5: Copy one card in your hand, it has Exhaust. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "${ModID}:Austerity: Draw until your hand is full. ${ModID}:Tribute 5: Copy one card in your hand, it has Exhaust. NL Exhaustive !stslib:ex!."
+    "DESCRIPTION": "${ModID}:Austerity: Draw until your hand is full. ${ModID}:Tribute 5: Copy one card in your hand. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "${ModID}:Austerity: Draw until your hand is full. ${ModID}:Tribute 5: Copy one card in your hand. NL Exhaustive !stslib:ex!."
   },
   "${ModID}:BoundlessTalentTribute": {
     "NAME": "Tribute",
-    "DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand, it has Exhaust."
+    "DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand."
   },
   "${ModID}:BoundlessTalentAusterity": {
     "NAME": "Austerity",
