[boundlessTalent] is working properly :D

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -5,5 +5,10 @@
       "Strong cards, but with downsides involving discard, Gold or HP costs.",
       "Levender"
     ]
+  },
+  "${ModID}:BoundlessTalentAction": {
+    "TEXT": [
+      "copy."
+    ]
   }
 }
