[forcefield] Crossing fingers did not work [sad] Ok, description fixed

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -24,7 +24,7 @@
   },
   "${ModID}:Forcefield": {
     "NAME": "Forcefield",
-    "DESCRIPTION": "Discard one random card. ${ModID}:Tribute 8: Gain !M2! Temp HP. ${ModID}:Austerity: Gain !M! Temp HP."
+    "DESCRIPTION": "Discard one random card. ${ModID}:Tribute 8: Gain !${ModID}:m2! Temp HP. ${ModID}:Austerity: Gain !M! Temp HP."
   },
   "${ModID}:ForcefieldTribute": {
     "NAME": "Tribute",
