[nobleSlash] Added MajesticBloodlineAction UI strings

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -10,5 +10,10 @@
     "TEXT": [
       "copy."
     ]
+  },
+  "${ModID}:MajesticBloodlineAction": {
+    "TEXT": [
+      "shuffle on your draw pile."
+    ]
   }
 }
