--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -13,7 +13,7 @@
   },
   "${ModID}:MajesticBloodlineAction": {
     "TEXT": [
-      "shuffle on your draw pile."
+      "Choose one card to shuffle on your draw pile."
     ]
   }
 }
