[windShield] Added ui text for Wind Shield action

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -15,5 +15,10 @@
     "TEXT": [
       "Choose one card to shuffle on your draw pile."
     ]
+  },
+  "${ModID}:WindShieldAction": {
+    "TEXT": [
+      "Discard any number of cards."
+    ]
   }
 }
