[boundlessTalent] Updated its description

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -50,8 +50,8 @@
   },
   "${ModID}:BoundlessTalent": {
     "NAME": "Boundless Talent",
-    "DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand. ${ModID}:Austerity: Draw until your hand is full.  NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand. ${ModID}:Austerity: Draw until your hand is full. NL Exhaustive !stslib:ex!."
+    "DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand. ${ModID}:Austerity: Draw until you have !M!.  NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "${ModID}:Tribute 5: Copy one card in your hand. ${ModID}:Austerity: Draw until you have !M!. NL Exhaustive !stslib:ex!."
   },
   "${ModID}:BoundlessTalentTribute": {
     "NAME": "Tribute",
@@ -59,7 +59,7 @@
   },
   "${ModID}:BoundlessTalentAusterity": {
     "NAME": "Austerity",
-    "DESCRIPTION": "Draw until your hand is full."
+    "DESCRIPTION": "Draw until you have !M!."
   },
   "${ModID}:Willpower": {
     "NAME": "Willpower",
