--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Cardstrings.json
@@ -16,7 +16,7 @@
   },
   "${ModID}:NobleSlash": {
     "NAME": "Noble Slash",
-    "DESCRIPTION": "Discard a random card. Draw one less the next turn. Deal !D! damage."
+    "DESCRIPTION": "Deal !D! damage. Discard a random card. Draw one less the next turn."
   },
   "${ModID}:WindShield": {
     "NAME": "Wind Shield",
