[imagesAndFixes] Added description and name of hat option

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -6,6 +6,12 @@
       "Levender"
     ]
   },
+  "${ModID}:RoyaltyPackHat": {
+    "TEXT": [
+      "The golden symbol of a heavy duty.",
+      "Royal Crown"
+    ]
+  },
   "${ModID}:BoundlessTalentAction": {
     "TEXT": [
       "copy."
