[bug_fixing] Austerity description now ends with "...this effect instead."

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/Keywordstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/Keywordstrings.json
@@ -11,6 +11,6 @@
     "NAMES": [
       "austerity"
     ],
-    "DESCRIPTION": "If you don't pay the Tribute cost, activate this effect."
+    "DESCRIPTION": "If you don't pay the Tribute cost, activate this effect instead."
   }
 ]
