[tweaks] Adding test text for credits

--- a/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/royaltypack/UIstrings.json
@@ -3,7 +3,8 @@
     "TEXT": [
       "Royalty",
       "Strong cards, but with downsides involving discard, Gold or HP costs.",
-      "Levender"
+      "Levender",
+      "test"
     ]
   },
   "${ModID}:RoyaltyPackHat": {
